MAPPTDESK-6 fix comment form macro regression due to update

--- a/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
+++ b/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
@@ -236,7 +236,7 @@
                 <h4 class="modal-title">#i18n{appointment.create_comment.pageTitle}</h4>
             </div>
             <div class="modal-body">
-                <@getCommentForm "comment" "startingValidityDate" "endingValidityDate" "doAddComment" idForm />
+                <@getCommentForm "comment" "startingValidityDate" "endingValidityDate" "doAddComment" idForm locale />
             </div>
             <div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal">#i18n{portal.util.labelCancel}</button></div>
         </div>
